accordion item visibility fix

--- a/src/components/sc-accordion/sc-accordion-item/sc-accordion-item.scss
+++ b/src/components/sc-accordion/sc-accordion-item/sc-accordion-item.scss
@@ -9,7 +9,7 @@
   * @prop --sc-accordion-item-body-max-height: 100vh;
   * @prop --sc-accordion-item-heading-bg-color: var(--sc-bg-color, #f1f1f1);
   * @prop --sc-accordion-item-body-bg-color: var(--sc-bg-color, #f1f1f1);
-  * @prop --sc-accordion-item-heading-border-color: var(--sc-shadow-color,rgba(0, 0, 0, 0.2));
+  * @prop --sc-accordion-item-heading-border-bottom: 1px solid var(--sc-shadow-color,rgba(0, 0, 0, 0.2));
   */
   --sc-accordion-animation-duration: var(--sc-animation-duration, 0.2s);
   --sc-accordion-animation-timing-function: var(
@@ -25,11 +25,9 @@
   --sc-accordion-item-heading-text-color: var(--sc-text-color, #333333);
   --sc-accordion-item-heading-bg-color: var(--sc-bg-color, #f1f1f1);
   --sc-accordion-item-body-bg-color: var(--sc-bg-color, #f1f1f1);
-  --sc-accordion-item-heading-border-color: var(
-    --sc-shadow-color,
-    rgba(0, 0, 0, 0.2)
-  );
-
+  --sc-accordion-item-heading-border-bottom: 1px solid
+    var(--sc-shadow-color, rgba(0, 0, 0, 0.2));
+  //-------------- accordion item --------------//
   display: block;
   .heading {
     display: flex;
@@ -93,7 +91,7 @@
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     transition: border-radius 0s ease;
-    border-bottom: 1px solid var(--sc-accordion-item-heading-border-color);
+    border-bottom: var(--sc-accordion-item-heading-border-bottom);
 
     .arrow {
       transform: rotate(180deg);
